--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -7,6 +7,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    
     <title>React Portfolio Website</title>
   </head>
   <body>
