finished webpage: missing true info

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -7,11 +7,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+
     <title>React Portfolio Website</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+
+  <!--==========================MAIN JS=============================-->
+  <script type="module" src="js/main.js"></script>
 </html>
